--- a/app/static/index.html
+++ b/app/static/index.html
@@ -7,6 +7,6 @@
     <title>GKE sample app</title>
   </head>
   <body>
-    <img src="http://${STATIC_ASSETS_HOST}/pod-128.png" />
+    <img src="/assets/pod-128.png" />
   </body>
 </html>
