--- a/app/static/index.html
+++ b/app/static/index.html
@@ -9,4 +9,12 @@
   <body>
     <img src="/assets/pod-128.png" />
   </body>
+  <script>
+    window.onload = function() {
+      fetch('http://$api.{ROOT_DOMAIN_NAME}/health')
+        .then(res => res.text())
+        .then(res => alert('API /health response: ' + res))
+        .catch(console.error)
+    }
+  </script>
 </html>
